--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-# CMS_REST_API_URL= 'http://localhost:1337'
+CMS_REST_API_URL= 'http://localhost:1337'
 SITE_URL="http://localhost:3000"
 
 
-CMS_REST_API_URL= 'https://store.africakinerestaurant.com/'
+# CMS_REST_API_URL= 'https://store.africakinerestaurant.com/'
